# deqing

./: .gitignore  AGENTS.md  CMakeLists.txt  config.json  docker-compose.yml  main.cc  region.json
3d_navi_sdk/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  main.cc  region.json
3d_navi_sdk/GridEvaluatorLib/: GridEvaluator.cc  GridEvaluator.h  conditionCheck.cc
3d_navi_sdk/controller/: api_airRoute_Astar.cc  api_airRoute_lineConflictCheck.cc  api_airRoute_pointConflictCheck.cc  api_airRoute_pointConflictCheck.h  api_multiSource_Data3dGrid.cc  api_multiSource_Data3dGrid.h  api_multiSource_airSpace.cc  api_multiSource_basicGrid.cc  api_multiSource_triangleGrid.cc
3d_navi_sdk/dqglib/: CMakeLists.txt
3d_navi_sdk/dqglib/include/dqg/: DQG2D.h  DQG3DBasic.h  DQGParam.h  Extractor.h  GlobalBaseTile.h
3d_navi_sdk/models/: model.json
3d_navi_sdk/readme/: A星路径规划缓冲区机制说明.md  Deqing_serve C++ 服务 Docker 部署文档.md  OSGB网格化接口使用文档.md
3d_navi_sdk/test/: CMakeLists.txt  test_redis.cpp
GridEvaluatorLib/: GridEvaluator.cc  GridEvaluator.h  conditionCheck.cc  conditionCheck.h
controller/: LineToGrids.cpp  LineToGrids.h  api_airRoute_Astar.cc  api_airRoute_Astar.h  api_airRoute_lineConflictCheck.h  api_airRoute_pointConflictCheck.cc  api_airRoute_smooth.cpp  api_airRoute_smooth.h  api_multiSource_Data3dGrid.cc  api_multiSource_airSpace.cc  api_multiSource_airSpace.h  api_multiSource_basicGrid.cc  api_multiSource_basicGrid.h  api_multiSource_geometricGrid.cc  api_multiSource_geometricGrid.h  api_multiSource_triangleGrid.cc  api_multiSource_triangleGrid.h
dqglib/: CMakeLists.txt
dqglib/include/dqg/: DQG3DBasic.h  DQG3DBuffer.h  DQG3DPolygon.h  DQG3DProximity.h  DQG3DTil.h  DQGMathBasic.h  Data.h  GeoParam.h  GlobalBaseTile.h
dqglib/src/: DQG2D.cpp  DQG3DBasic.cpp  DQG3DBuffer.cpp  DQG3DPolygon.cpp  DQG3DProximity.cpp  DQG3DTil.cpp  DQGMathBasic.cpp  Extractor.cpp  GlobalBaseTile.cpp  OSGtoCode.cpp
models/: GridData.cc  GridData.h
readme/: dqglib函数接口文档.md  算路因子.md
